feat: add btn-priority

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,10 @@
-@mixin btn {
-    width: 30px;
+@mixin btn($width: 30px) {
+    width: $width;
     height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Open Sans", sans-serif;
     background-color: #e1ebff;
     border: none;
     border-radius: 5px;
@@ -12,7 +13,6 @@
 
     &:hover {
         background-color: #cdd1ff;
-        border: 1px solid #7878e6;
     }
 }
 
@@ -64,11 +64,13 @@ body {
 .todo-form {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 5px;
 
     // .todo-form__input
     &__input {
-        min-width: 90%;
+        width: 100%;
         padding: 5px 10px;
         font-size: 16px;
         font-style: italic;
@@ -81,13 +83,34 @@ body {
         }
     }
 
+    // .todo-form__priority
+    &__priority {
+        @include btn(60%);
+        justify-content: flex-start;
+        gap: 5px;
+        padding: 0 10px;
+        font-size: 14px;
+        color: #23092c;
+        background-color: transparent;
+
+        // .todo-form__priority--important
+        &--important {
+            border: 1px solid #1e9e12;
+        }
+
+        // .todo-form__priority--checkbox
+        &--checkbox {
+            width: 20px;
+            height: 20px;
+        }
+    }
+
     // .todo-form__btn-add
     &__btn-add {
-        @include btn();
-        font-family: "Open Sans", sans-serif;
-        font-size: 32px;
+        @include btn(20%);
+        font-size: 36px;
         font-weight: bold;
-        color: #7878e6;
+        color: #1e9e12;
     }
 }
 
@@ -110,30 +133,34 @@ body {
     background-color: #e1ebff;
     border-radius: 5px;
 
+    //.todo-item--done
     &--done {
         text-decoration: line-through;
-        text-decoration-color: #42ac59;
+        text-decoration-color: #4256ac;
         text-decoration-thickness: percentage($number: 0.15);
+    }
+
+    //.todo-item--important
+    &--important {
+        background-color: #b7eec2;
     }
 
     // .todo-item__btn-done
     &__btn-done {
-        @include btn();
-        width: 20px;
+        @include btn(20px);
         height: 20px;
         border: 1px solid #7878e6;
         background-repeat: no-repeat;
         background-position: center;
 
-        // .todo-item:hover .todo-item__btn-done
         // .todo-item--done .todo-item__btn-done
-        .todo-item:hover &,
         .todo-item--done > & {
             background-image: url("./image/btn-done.png");
         }
 
         // .todo-item__btn-done:hover,
         &:hover {
+            background-image: url("./image/btn-done.png");
             background-size: contain;
         }
     }
