fix: fix errors

--- a/src/style.scss
+++ b/src/style.scss
@@ -95,7 +95,7 @@ body {
 
         // .todo-form__priority--important
         &--important {
-            border: 1px solid #1e9e12;
+            border: 1px solid #eeb7c5;
         }
 
         // .todo-form__priority--checkbox
@@ -142,7 +142,7 @@ body {
 
     //.todo-item--important
     &--important {
-        background-color: #b7eec2;
+        background-color: #eeb7c5;
     }
 
     // .todo-item__btn-done
